Revert "Self Assessment Table multiline content float to right on mobile view Fix"
This reverts commit daf4db7174ffd53283e8d6b957d8a7a6dd584a21.

--- a/DigitalLearningSolutions.Web/Styles/learningPortal/selfAssessmentOverview.scss
+++ b/DigitalLearningSolutions.Web/Styles/learningPortal/selfAssessmentOverview.scss
@@ -25,14 +25,3 @@
   border-width: 7px 0 7px 12.124px;
   border-left-color: inherit;
 }
-
-@media (max-width: 48.0525em){
-
-.nhsuk-table-responsive .nhsuk-table__body .nhsuk-table__row td {
-  padding-right: 0;
-  text-align:left;
-
-}
-}
-
-
